packages/components/tree/style/index.less
@import '../../style/mixins/reset.less';
@import './mixin.less';

.@{tree-prefix} {
  .reset-component();

  font-size: @tree-font-size;
  background-color: @tree-background-color;
  border-radius: @border-radius-sm;

  &-focused:not(:hover):not(&-active) {
    background-color: @tree-background-color-focused;
  }

  &-auto-height {
    height: 100%;

    .@{tree-prefix}-content {
      height: 100%;
    }
  }

  &:not(&-virtual) &-content {
    overflow: auto;
  }
  &-content-inner {
    display: flex;
    flex-flow: column wrap;
  }

  &-blocked {
    .@{tree-node-prefix} {
      transition: background-color @transition-duration-base;

      &-active:not(&-disabled),
      &-selected:not(&-disabled) {
        background-color: @tree-node-selected-background-color;
        &:hover {
          background-color: @tree-node-hover-background-color;
        }
      }

      &:hover {
        background-color: @tree-node-hover-background-color;
        .@{tree-node-prefix} {
          &-draggable-icon {
            opacity: 1;
          }
          &-content {
            background-color: @tree-node-hover-background-color;
          }
        }
      }

      &-content {
        flex: auto;
      }
    }
  }

  &-show-line {
    .@{tree-node-prefix} {
      &-last {
        .@{tree-node-prefix}-leaf-line {
          &::before {
            bottom: 50%;
          }
        }
      }

      &-expand {
        position: relative;
        color: @tree-expand-icon-color;

        &-top-line {
          position: absolute;
          height: (@tree-node-content-height / 2 - 4);
          /* stylelint-disable function-no-unknown */
          top: -(@tree-node-content-height / 4 - 4);
          right: 50%;
          .vertical-line();
        }

        &::after {
          position: absolute;
          top: 50%;
          width: (@tree-node-content-height / 4);
          .horizontal-line();

          content: ' ';
        }
      }

      &:not(&-expanded):not(&-last) {
        .@{tree-node-prefix}-expand {
          &::before {
            position: absolute;
            top: (@tree-node-content-height - 6);
            right: 50%;
            height: (@tree-node-content-height / 2 - 4);
            z-index: 1;
            .vertical-line();

            content: ' ';
          }
        }
      }
    }

    .@{tree-node-prefix}-indent {
      align-self: stretch;
      white-space: nowrap;

      &-unit {
        position: relative;
        height: 100%;

        &::before {
          position: absolute;
          top: -@tree-node-padding-vertical;
          right: (@tree-node-content-height / 2);
          bottom: -@tree-node-padding-vertical;
          .vertical-line();

          content: '';
        }
      }
    }
  }
}

.@{tree-node-prefix} {
  position: relative;
  display: flex;
  align-items: center;
  padding: @tree-node-padding-vertical 0;
  white-space: nowrap;

  .@{icon-prefix} {
    font-size: @tree-icon-font-size;
  }

  &-indent {
    &-noop-unit,
    &-unit {
      display: inline-block;
      width: @tree-node-content-height;
    }
  }

  &-draggable-icon {
    cursor: pointer;
    opacity: 0.4;
    text-align: center;
    transition: opacity @transition-duration-base @ease-in-out;
    width: @tree-node-content-height;

    &-noop {
      width: @tree-node-content-height;
    }
  }

  &-expand {
    width: @tree-node-content-height;
    line-height: @tree-node-content-height;
    text-align: center;
    cursor: pointer;

    &-noop {
      cursor: default;
    }
  }

  &-checkbox {
    margin: @tree-node-checkbox-margin;
  }

  &-leaf {
    width: @tree-node-content-height;
    align-self: stretch;
    text-align: center;
    cursor: default;

    &-line {
      position: relative;
      z-index: 1;
      display: block;
      height: 100%;
      width: 100%;

      &::before {
        position: absolute;
        top: -@tree-node-padding-vertical;
        right: (@tree-node-content-height / 2);
        bottom: -@tree-node-padding-vertical;
        .vertical-line();

        content: ' ';
      }

      &::after {
        position: absolute;
        top: 50%;
        bottom: 0;
        left: 55%;
        right: 0;
        .horizontal-line();

        content: ' ';
      }
    }
  }

  &-content {
    position: relative;
    display: inline-flex;
    cursor: pointer;
    min-height: @tree-node-content-height;
    line-height: @tree-node-content-height;
    transition: background-color @transition-duration-base;

    &:hover {
      background-color: @tree-node-hover-background-color;
    }

    &-prefix,
    &-suffix {
      display: inline-block;
      text-align: center;
    }

    &-label {
      display: inline-block;
      flex-grow: 1;
      padding: @tree-node-content-label-padding;

      &-highlight {
        color: @tree-node-content-label-highlight-color;
      }
    }
  }

  &-active:not(&-disabled) &-content {
    background-color: @tree-node-hover-background-color;
  }

  &-selected:not(&-disabled) &-content {
    background-color: @tree-node-selected-background-color;
    color: @tree-node-selected-color;
    &:hover {
      background-color: @tree-node-hover-background-color;
    }
  }

  &-disabled &-content {
    color: @tree-node-disabled-color;
    cursor: not-allowed;

    &:hover {
      background: transparent;
    }
  }

  &-drop-parent,
  &-drop-inside {
    box-shadow: 0 0 0 @tree-box-shadow-size @tree-box-shadow-color;
  }

  &-drop-before &-content {
    box-shadow: 0 -@tree-box-shadow-size 0 0 @tree-box-shadow-color;
  }

  &-drop-after &-content {
    box-shadow: 0 @tree-box-shadow-size 0 0 @tree-box-shadow-color;
  }
}

